
Main Goals for 1.0 Release

   * MOL2 and CML file formats

   * Generalized volumetric rendering: (1) mesh (2) solid (3) colormaps

   * Integrated tutorial/demonstration system

   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems, etc).
     sometimes it just fails period
Changes up to 0.88

   * fixed session restore bug with editing mode

   * worked around Solaris compiler limitations.

Changes up to 0.87

   * improved launch speed by hard-coding sphere definitions

   * improved surfacing algorithm performance by about 12% 

   * dot_solvent, mesh_solvent, and sphere_solvent settings

   * simplified and improved mesh quality, added mesh_quality setting

   * fixed session restore crash with objects having multiple states.

   * improved specular reflection on transparent surfaces
     (ray_transparency_specular=0) will restore original behavior.

   * stick_transparency setting

   * ray_transparency_shadows setting

Changes up to 0.86

   * added command history feature to external gui

   * added security warning and mechanism for session files 
     containing movie commands.

   * session saves completed -- boy that was a lot of work!

   * reorganized tcltk menu structure

   * minimal texture options exposed in menu (slow!)

   * better support for Python in PyMOL command scripts ('\' works for multiline blocks).

   * freeze state and thaw state added to mol_action menu

   * added xmlrpc01.py demonstration program to examples/devel

   * ribbon_trace can be used to view CA-only models

   * ray_shadows setting can disable shadows in raytracer (slight performance inc.)

   * added secondary structure to chemical python model data structure

   * fixed slab mode of clip statement

   * update 'expand' and 'attach' can now take an atom name as well as an element symbol

Changes up to 0.85
